<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.11">
  <POU Name="OP10_AUTO" Id="{464bf162-189d-4912-89bf-826d8a33f426}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM OP10_AUTO
VAR
	r1							: R_TRIG;	
	STEP_NO						: INT;
	STP_NO						: INT;
	AFT_GRP_HME					: TON;
	AFT_SRV_WRK					: TON;
	AFT_GRP_WRK					: TON;
	AFT_ROBO_CM_GRP_OPN			: TON;
	CMR_RSLT_DN					: TON;
	OP10_BODY_SING_HOME			: BOOL;
END_VAR

VAR PERSISTENT
	AFT_GRP_HME_TIME			: TIME;
	AFT_SRV_WRK_TIME			: TIME;
	AFT_GRP_WRK_TIME			: TIME;	
	AFT_ROBO_GRP_OPN			: TIME;
	OP10_COUNT					: DINT;
	OP10A_Auto_Status			: STRING;
	OP10B_Auto_Status			: STRING;
END_VAR]]></Declaration>
    <Implementation>
      <ST><![CDATA[

(*
IF  CHECK OR OP10A_AUTO_RUNNING OR OP10A_STEP_RUNNING OR OP10B_AUTO_RUNNING OR OP10B_STEP_RUNNING THEN

IF (OP10A_STRT_PB OR OP10B_STRT_PB OR CHECK)AND STEP_NO=0 THEN
	STEP_NO							:= 1;
	STP_NO							:= 1;
END_IF	


CASE STEP_NO OF
	
	1:	IF NOT END_OF_CYCLE THEN
		IF OP10_COMP_PICKED_1	THEN
		STEP_NO							:= 20;
		ELSE
		STEP_NO							:= 2;
		END_IF 
		ELSE
		STEP_NO							:= 0;		
		END_IF


	2:	IF I10_LH_LNR_TRK_BDY_PRSN_I1000_5 AND NOT (OP10A_ROBO_Gripper_Close AND OP10A_Rbt_In_Pick_Zone) 
			AND NOT (OP10B_ROBO_Gripper_Close AND OP10B_Rbt_In_Pick_Zone)THEN
		OP10_A_FRT_BDY_SING_HME			:= TRUE; 
		OP10_A_FRT_BDY_SING_WRK			:= FALSE;
		STEP_NO							:= 5;
		END_IF

	5: IF AFT_GRP_HME.Q THEN
		OP10_A_SRV_FST_BDYPCK_WRK		:= TRUE;
		STEP_NO							:= 10;	
		END_IF
	
	
	10: IF AFT_SRV_WRK.Q THEN
		OP10_A_FRT_BDY_SING_HME			:= FALSE; 
 	    OP10_A_FRT_BDY_SING_WRK			:= TRUE;
		OP10_COMP_PICKED_1				:= TRUE;
		STEP_NO							:= 15;
		END_IF
		
	15: IF AFT_GRP_WRK.Q THEN
		OP10_A_SRV_FST_BDYPCK_HME		:= TRUE;		
		STEP_NO							:= 20;
		END_IF	

	20:	IF OP10_SRV_FRST_PCKBDY_HME_FB THEN
													//		OP10_LH_CMP_RDY_PCK				:= TRUE;
		OP10A_SING_CMR_TRIG				:= TRUE;
		STEP_NO							:= 25;		
		END_IF
		
	25: CMR_RSLT_DN(IN:=(STEP_NO=25) AND NOT OP10A_SING_CAM_DN , PT:=T#1.5S , Q=> , ET=> );	
		IF CMR_RSLT_DN.Q THEN
		OP10A_SING_CMR_TRIG				:= FALSE;	
		STEP_NO							:= 20;	
		END_IF
		IF OP10A_SING_CAM_DN OR OP10A_SING_CAM_BYPASS THEN
		STEP_NO							:= 30;			
		END_IF
		
	30: IF OP10A_Body_OK OR OP10A_SING_CAM_BYPASS THEN
		STEP_NO							:= 35;
		END_IF
		IF OP10A_Body_NOK THEN
		OP10_COMP_PICKED_1				:= FALSE;
		STEP_NO							:= 1;
		END_IF
		
	(*35: 

	
		IF AFT_ROBO_CM_GRP_OPN.Q OR CHECK THEN

		END_IF*)
		

	500: OP10_COMP_PICKED_1				:= FALSE;
		OP10_A_FRT_BDY_SING_HME			:= TRUE; 
		OP10_A_SEC_BDY_SING_HME			:= TRUE; 
		OP10_A_FRT_BDY_SING_WRK			:= FALSE;
		OP10_A_SEC_BDY_SING_WRK			:= FALSE;
		OP10_LH_CMP_RDY_PCK				:= FALSE;
		OP10_RH_CMP_RDY_PCK				:= FALSE;		
		STEP_NO							:= 1;
	
END_CASE

		AFT_GRP_HME(IN:=(OP10_BDY_SING_FRT.Sensor1), PT:=AFT_GRP_HME_TIME, Q=> , ET=> );
		AFT_SRV_WRK(IN:=OP10_SRV_FRST_PCKBDY_WRK_FB, PT:=AFT_SRV_WRK_TIME , Q=> , ET=> );
		AFT_GRP_WRK(IN:= OP10_BDY_SING_FRT.Sensor2, PT:=AFT_GRP_WRK_TIME , Q=> , ET=> );
		AFT_ROBO_CM_GRP_OPN(IN:=(OP10A_ROBO_Gripper_Close AND OP10A_Rbt_In_Pick_Zone AND (OP10A_A_SRV_LH_GRPWRK_FB OR OP10A_BDY1_PCK_BYPAS) AND (OP10A_A_SRV_RH_GRPWRK_FB OR OP10A_BDY2_PCK_BYPAS))OR 
			(OP10B_ROBO_Gripper_Close AND OP10B_Rbt_In_Pick_Zone AND (OP10B_A_SRV_LH_GRPWRK_FB OR OP10B_BDY1_PCK_BYPAS)AND (OP10B_A_SRV_RH_GRPWRK_FB OR OP10B_BDY2_PCK_BYPAS)), PT:=AFT_ROBO_GRP_OPN, Q=> , ET=> );

CASE STP_NO OF

	1:	IF NOT END_OF_CYCLE THEN
		IF OP10_COMP_PICKED_2	THEN
		STEP_NO							:= 20;
		ELSE
		STEP_NO							:= 2;
		END_IF 
		ELSE
		STEP_NO							:= 0;		
		END_IF


	2:	IF I10_LH_LNR_TRK_BDY_PRSN_I1000_5 AND I10_RH_LNR_TRK_BDY_PRSN_I1000_6 AND NOT (OP10A_ROBO_Gripper_Close AND OP10A_Rbt_In_Pick_Zone) 
			AND NOT (OP10B_ROBO_Gripper_Close AND OP10B_Rbt_In_Pick_Zone)THEN
		OP10_A_FRT_BDY_SING_HME			:= TRUE; 
		OP10_A_SEC_BDY_SING_HME			:= TRUE; 
		OP10_A_FRT_BDY_SING_WRK			:= FALSE;
		OP10_A_SEC_BDY_SING_WRK			:= FALSE;
		STEP_NO							:= 5;
		END_IF

	5: IF AFT_GRP_HME.Q THEN
		OP10_A_SRV_FST_BDYPCK_WRK		:= TRUE;
		OP10_A_SRV_SCND_BDYPCK_WRK		:= TRUE;
		OP10_COMP_PICKED_2				:= TRUE;
		STEP_NO							:= 10;	
		END_IF
	
	
	10: IF AFT_SRV_WRK.Q THEN
		IF OP10_SRV_FRST_PCKBDY_WRK_FB THEN
		OP10_A_FRT_BDY_SING_HME			:= FALSE; 
 	    OP10_A_FRT_BDY_SING_WRK			:= TRUE;
		END_IF
		IF OP10_SRV_SCND_PCKBDY_WRK_FB THEN
		OP10_A_SEC_BDY_SING_HME			:= FALSE;
		OP10_A_SEC_BDY_SING_WRK			:= TRUE;
		END_IF	
		IF OP10_SRV_FRST_PCKBDY_WRK_FB AND OP10_SRV_SCND_PCKBDY_WRK_FB THEN
		STEP_NO							:= 15;	
		END_IF
		END_IF
		
	15: IF AFT_GRP_WRK.Q THEN
		OP10_A_SRV_SCND_BDYPCK_HME		:= TRUE;	
		OP10_A_SRV_FST_BDYPCK_HME		:= TRUE;	
		STEP_NO							:= 20;
		END_IF	

	20:	IF OP10_SRV_FRST_PCKBDY_HME_FB AND OP10_SRV_SCND_PCKBDY_HME_FB THEN
		OP10_LH_CMP_RDY_PCK				:= TRUE;
		OP10_RH_CMP_RDY_PCK				:= TRUE;
		IF AFT_ROBO_CM_GRP_OPN.Q OR CHECK THEN
		STEP_NO							:= 25;
		END_IF
		END_IF

	25: OP10_COMP_PICKED_2				:= FALSE;
		OP10_A_FRT_BDY_SING_HME			:= TRUE; 
		OP10_A_SEC_BDY_SING_HME			:= TRUE; 
		OP10_A_FRT_BDY_SING_WRK			:= FALSE;
		OP10_A_SEC_BDY_SING_WRK			:= FALSE;
		OP10_LH_CMP_RDY_PCK				:= FALSE;
		OP10_RH_CMP_RDY_PCK				:= FALSE;		
		STEP_NO							:= 1;



END_CASE

ELSE
		STEP_NO							:= 0;
		STP_NO							:= 0;
		OP10_A_SRV_FST_BDYPCK_WRK		:= FALSE;
		OP10_A_SRV_SCND_BDYPCK_WRK		:= FALSE;
		OP10_A_FRT_BDY_SING_HME			:= FALSE; 
		OP10_A_SEC_BDY_SING_HME			:= FALSE; 
		OP10_A_FRT_BDY_SING_WRK			:= FALSE;
		OP10_A_SEC_BDY_SING_WRK			:= FALSE;
		OP10_A_SRV_SCND_BDYPCK_HME		:= FALSE;	
		OP10_A_SRV_FST_BDYPCK_HME		:= FALSE;
END_IF


IF CHECK AND OP10_BODY_SING_HOME THEN
	OP10_A_SRV_SCND_BDYPCK_HME		:= (OP10_BDY_SING_FRT.Sensor1 AND OP10_BDY_SING_SEC.Sensor1) ;		
	OP10_A_SRV_FST_BDYPCK_HME	    := (OP10_BDY_SING_FRT.Sensor1 AND OP10_BDY_SING_SEC.Sensor1) ;
	OP10_A_SRV_FST_BDYPCK_WRK		:= FALSE;
	OP10_A_SRV_SCND_BDYPCK_WRK		:= FALSE;
	OP10_A_FRT_BDY_SING_HME			:= TRUE; 
 	OP10_A_FRT_BDY_SING_WRK			:= FALSE;
	OP10_A_SEC_BDY_SING_HME			:= TRUE;
	OP10_A_SEC_BDY_SING_WRK			:= FALSE;	
	STEP_NO							:= 1;
END_IF








r1(CLK:=OP10_SRV_FRST_PCKBDY_HME_FB AND OP10_SRV_SCND_PCKBDY_HME_FB , Q=> );
IF r1.Q THEN
	OP10_COUNT:=OP10_COUNT+1;
END_IF

*)
]]></ST>
    </Implementation>
    <LineIds Name="OP10_AUTO">
      <LineId Id="228" Count="2" />
      <LineId Id="3" Count="201" />
      <LineId Id="227" Count="0" />
      <LineId Id="226" Count="0" />
      <LineId Id="2" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>